# jav-scraper-vanced

./: .augment-guidelines  .env.example  README.md  WARP.md  config.yml  how-to-run-MacOS.md  pyproject.toml
docs/: MIGRATION_SUMMARY.md
javsp/: __main__.py  config.py  func.py
javsp/web/: airav.py  javbus.py  translate.py
